--- a/ECD.Client/src/app/theme/sass/conf/_variables.scss
+++ b/ECD.Client/src/app/theme/sass/conf/_variables.scss
@@ -21,7 +21,11 @@ $large-card-height: 974px;
 $default-animation-duration: 0.2s;
 $default-animation-style: ease-out;
 
-$assets-root: 'assets/';
+/*$assets-root: 'assets/';
+$images-root: $assets-root + 'img/';
+$fonts-root: $assets-root + 'fonts/';*/
+/* Above Changed to*/
+$assets-root: 'dist/assets/';
 $images-root: $assets-root + 'img/';
 $fonts-root: $assets-root + 'fonts/';
 $font-thin: 100;
